enable sendMessage in create event page

--- a/src/pages/create-event/create-event.html
+++ b/src/pages/create-event/create-event.html
@@ -122,7 +122,7 @@
     <ion-card *ngIf="event.pending_people_ids != -1" class="inner-card">
       <ion-item>
         <ion-label class="res-title"><b>Pending people: </b></ion-label>
-        <button outline color="danger" small ion-button item-end (click)="sendNotification()">resend invitation</button>
+        <button outline color="danger" small ion-button item-end (click)="sendMessage()">resend invitation</button>
       </ion-item>
       <ion-card-content>
         <div>
