some change in create event page

--- a/src/pages/create-event/create-event.html
+++ b/src/pages/create-event/create-event.html
@@ -112,7 +112,7 @@
         <div>
           <h2>
             <span *ngFor="let pId of event.coming_people_ids; let isLast=last">
-              {{ getUserById(pId).name }} {{isLast ? '' : ', '}}
+              {{ getUserNameById(pId) }} {{isLast ? '' : ', '}}
             </span>
           </h2>
         </div>
