--- a/src/pages/user-profile/user-profile.html
+++ b/src/pages/user-profile/user-profile.html
@@ -7,7 +7,7 @@ Ionic pages and navigation.
 <ion-header>
 
   <ion-navbar>
-    <ion-title>UserProfile</ion-title>
+    <ion-title>Profile</ion-title>
   </ion-navbar>
 
 </ion-header>
