--- a/src/pages/message/message.html
+++ b/src/pages/message/message.html
@@ -15,9 +15,10 @@
 
 <ion-content padding>
 	<ion-item-group no-padding>
-	
+
 		<ion-item-divider class="notifications-divider">11/26/18</ion-item-divider>
 			<ion-list *ngFor="let message of messages">
+				<div *ngIf="message.receiverId === this.myId">
 				 <ion-card>
 				<ion-item no-padding class="notification-item">
 					<ion-avatar item-left>
@@ -43,6 +44,7 @@
 					<ion-note class="item-time" item-right>10:10am</ion-note>
 				</ion-item>
 				 </ion-card>
+				 </div>
 			</ion-list>
 		<ion-item-divider no-padding class="notifications-divider">11/25/18</ion-item-divider>
 
