--- a/src/pages/event-detail/event-detail.html
+++ b/src/pages/event-detail/event-detail.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Mexican Food</ion-title>
+    <ion-title>{{ event.title }}</ion-title>
   </ion-navbar>
 
 </ion-header>
