mute a hard coded date line in message

--- a/src/pages/message/message.html
+++ b/src/pages/message/message.html
@@ -55,7 +55,7 @@
 					</ion-card>
 				 </div>
 			</ion-list>
-		<ion-item-divider no-padding class="notifications-divider">11/25/18</ion-item-divider>
+		<!-- <ion-item-divider no-padding class="notifications-divider">11/25/18</ion-item-divider> -->
 
 	</ion-item-group>
 </ion-content>
